--- a/appz.yml
+++ b/appz.yml
@@ -9,10 +9,10 @@ build:
   build_file: pom.xml
   output_files: output/*.war
   image_template: tomcat8-v2
-  image_name: ea-sharedservices/tomcat-helloworld
+  image_name: amar-hikeqa/tomcat-helloworld
 
 deploy:
-  context: EA-SharedServices/DEV
+  context: amar-hikeqa/DEV
   replicas: 4
   port: 8080
   strategy : rolling
